HW2 [fix] Fix meal and user layers
- removed silent null handling in in-memory repositories
- stabilized user sorting by name with email
- returned ordered List from MealRepository.getAll
- seeded in-memory meals for multiple users and reused Collections.emptyList()
- used ValidationUtil.checkNotFound in MealService
- removed AbstractMealController and added meal filtering in controller